--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -216,6 +216,10 @@ button.inactive, input[type="submit"].inactive {
     background-color: var(--failure) !important;
 }
 
+.bg-background {
+    background-color: var(--background);
+}
+
 @media (min-width: 720px) {
     .container {
         padding: 1rem 0;
