--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -192,7 +192,7 @@ button:hover, input[type="submit"]:hover, a.button:hover {
     transform: scale(105%);
 }
 
-button.inactive, input[type="submit"].inactive {
+button.inactive, input[type="submit"].inactive, a.button.inactive {
     background-color: var(--block);
 }
 
