--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,8 @@
     box-sizing: border-box;
 }
 
-body, html {
+body,
+html {
     flex: 1;
     margin: 0;
     font-family: "ui-sans-serif", sans-serif;
@@ -173,7 +174,9 @@ input {
     background-color: var(--background);
 }
 
-button, input[type="submit"], a.button {
+button,
+input[type="submit"],
+a.button {
     border: none;
     padding: 0.5rem;
     color: #ffffff;
@@ -185,14 +188,18 @@ button, input[type="submit"], a.button {
     display: inline-block;
 }
 
-button:hover, input[type="submit"]:hover, a.button:hover {
+button:hover,
+input[type="submit"]:hover,
+a.button:hover {
     background-color: var(--button-hover);
     color: #ffffff;
     transition: all 0.1s ease-out;
     transform: scale(105%);
 }
 
-button.inactive, input[type="submit"].inactive, a.button.inactive {
+button.inactive,
+input[type="submit"].inactive,
+a.button.inactive {
     background-color: var(--block);
 }
 
