--- a/static/style.css
+++ b/static/style.css
@@ -161,7 +161,7 @@ pre code {
     padding: 1em;
 }
 
-input {
+input, textarea {
     padding: 0.5rem;
     border: rgba(160, 160, 160, 0.3);
     border-radius: 4px;
@@ -170,7 +170,7 @@ input {
     margin: 0.5rem 0;
 }
 
-.block input {
+.block input, .block textarea {
     background-color: var(--background);
 }
 
@@ -225,6 +225,12 @@ a.button.inactive {
 
 .bg-background {
     background-color: var(--background);
+}
+
+.blockquote {
+    padding: 0.25rem;
+    padding-left: 0.5rem;
+    border-left: 5px solid var(--background)
 }
 
 @media (min-width: 720px) {
