fix text color on pagination buttons

--- a/static/style.css
+++ b/static/style.css
@@ -201,6 +201,7 @@ button.inactive,
 input[type="submit"].inactive,
 a.button.inactive {
     background-color: var(--block);
+    color: var(--text);
 }
 
 .text-left {
